# nous

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  ROADMAP.md  build-daemon.sh  cc.txt  index.html  install-cli.sh  justfile  nous-app.md  nous.el  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  put-1675-body.json  run-build.sh  run-daemon.sh  run-dev.sh  run-tui.sh  setup-python-env.sh  test_llm_stream.py  vite.config.ts  vite.web.config.ts
.cargo/: config.toml
.claude/commands/: do-feature.md
cloud/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
cloud/src/: errors.ts  (+3 more)
design/: README.md  direction-a-database.html  direction-a-editor.html  direction-a-graph.html  direction-a-library.html  direction-a-style-tile.html  direction-b-database.html  direction-b-editor.html  direction-b-library.html  direction-b-palette.html  direction-b-style-tile.html
docs/: AGENT_PAGE_STORAGE.md  data-loss-audit-2026-06-14.md  editor-migration-research.md  incident-2026-05-01-webdav-sync-data-loss.md  plugin-architecture.md
examples/: test-network-events-plugin.lua
katt-py/: pyproject.toml
katt-py/katt_ai/: __init__.py  chat.py  embeddings.py  mcp_client.py  models.py  video_transcribe.py  web_research.py
katt-py/katt_ai/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py
landing/: index.html
nous-py/: pyproject.toml
nous-sdk/: README.md  pyproject.toml  test_events.py  test_sdk.py
nous-sdk/src/nous_sdk/: __init__.py  client.py  models.py
public/: manifest.webmanifest
scripts/: act-build.sh  audit-sync-wipes.sh  bundle-python.sh  recover-2026-05-01-wipe.sh  release.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_reader.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai_config.rs  events.rs  freeze_watchdog.rs  lib.rs  main.rs  mcp_watcher.rs  video_server.rs
src-tauri/src/actions/: builtin.rs  executor.rs  mod.rs  models.rs  scheduler.rs  storage.rs  variables.rs
src-tauri/src/chat_sessions/: models.rs  storage.rs
src-tauri/src/collab/: credentials.rs  mod.rs  storage.rs  token.rs
src-tauri/src/commands/: actions.rs  ai.rs  assets.rs  audio.rs  backup.rs  chat_sessions.rs  collab.rs  contacts.rs  daemon_key.rs  daily_notes.rs  document_convert.rs  drawing.rs  encryption.rs  energy.rs  evernote.rs  external_editor.rs  external_sources.rs  file_pages.rs  flashcard.rs  folder.rs  git.rs  goals.rs  inbox.rs  infographic.rs  joplin.rs  library.rs  markdown.rs  mcp.rs  mod.rs  monitor.rs  notebook.rs  notion.rs  obsidian.rs  onenote.rs  organize.rs  orgmode.rs  page.rs  pdf_annotations.rs  plugins.rs  publish.rs  (+14 more)
src-tauri/src/contacts/: harvester.rs  mod.rs  models.rs  storage.rs
src-tauri/src/encryption/: crypto.rs  errors.rs  manager.rs  mod.rs  models.rs
src-tauri/src/energy/: mod.rs  models.rs  storage.rs
src-tauri/src/evernote/: import.rs  mod.rs
src-tauri/src/external_editor/: mod.rs
src-tauri/src/external_sources/: mod.rs  models.rs  storage.rs
src-tauri/src/flashcards/: algorithm.rs  mod.rs  models.rs  storage.rs
src-tauri/src/git/: mod.rs  repository.rs
src-tauri/src/goals/: detector.rs  mod.rs  models.rs  storage.rs
src-tauri/src/inbox/: mod.rs  models.rs  storage.rs
src-tauri/src/joplin/: import.rs  mod.rs
src-tauri/src/markdown/: export.rs  import.rs  mod.rs
src-tauri/src/monitor/: capture.rs  mod.rs  models.rs  scheduler.rs  storage.rs
src-tauri/src/notion/: import.rs  mod.rs
src-tauri/src/obsidian/: import.rs  mod.rs
src-tauri/src/onenote/: import.rs
src-tauri/src/orgmode/: import.rs  mod.rs
src-tauri/src/plugins/: PLUGIN_DEVELOPMENT.md  api.rs  error.rs  host.rs  loader.rs  manifest.rs  mod.rs  registry.rs  tests.rs
src-tauri/src/plugins/builtins/: carry_forward.lua  daily_goal_nudge.lua  daily_learning_summary.lua  daily_note_carry_forward.lua  daily_outcomes.lua  daily_reflection.lua  database_automation.lua  database_heatmap.lua  database_templates.lua  exam_prep.lua  export_print.lua  export_revealjs.lua  external_data_embed.lua  food_tracker.lua  goal_brainstorm.lua  kanban_board.lua  map_view.lua  mermaid_block.lua  monthly_outcomes.lua  pomodoro_timer.lua  sprint_planning.lua  treemap_view.lua  weekly_carry_forward.lua  weekly_outcomes.lua  weekly_review.lua  weekly_study_review.lua  writing_analysis.lua  writing_stats_panel.lua
src-tauri/src/plugins/runtime/: lua.rs  mod.rs  wasm.rs
src-tauri/src/publish/: html.rs  mod.rs  presentation.rs  print.rs  site.rs  themes.rs
src-tauri/src/python_bridge/: mod.rs
src-tauri/src/rag/: chunker.rs  index.rs  mod.rs  models.rs
src-tauri/src/scrivener/: import.rs  mod.rs
src-tauri/src/search/: backend.rs  index.rs  mod.rs  rag_backend.rs  rag_config.rs  tantivy_backend.rs
src-tauri/src/share/: credentials.rs  html_gen.rs  mod.rs  publish.rs  publish_token.rs  s3_signer.rs  storage.rs  upload.rs
src-tauri/src/storage/: atomic.rs  backup.rs  content_format.rs  file_storage.rs  html_utils.rs  migration.rs  mod.rs  models.rs  oplog.rs  snapshots.rs
src-tauri/src/sync/: config.rs  events.rs  manager.rs  metadata.rs  mod.rs  notify.rs  queue.rs  scheduler.rs
src-tauri/src/sync/crdt/: converter.rs  mod.rs  store.rs
src-tauri/src/sync/webdav/: client.rs  mod.rs
tools/: ONENOTE_IMPORT.md  onenote_to_nous.py  pyproject.toml
web/: deploy.sh  index.html  package-lock.json  package.json  serve.mjs
(+691 files in other folders)
