[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nous-sdk"
version = "0.1.0"
description = "Python SDK for the Nous notebook application"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/nous_sdk"]
