[package]
name = "katt"
version = "0.1.0"
description = "Personal notebook and data organization tool"
authors = ["you"]
license = "ISC"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "katt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dirs = "5.0"
tantivy = "0.22"
